Since 0.2.1
  - bug fix: field choices in rules were not saved correctly
  - allows to match fields with regexps in rules

0.2.1
  - fix for recent TB builds  (ontextcommand -> ontextentered,
    ontextrevert -> ontextreverted)

0.2.0
  - make shell-completion optional (default behavior for Tab is to cycle 
    through sugestions)
  - allow to switch between "To:" and "Cc:" fields efficiently in the composer
  - triple Escape to clear the quick search box
  - double Escape in composer to focus on the message body
  - Escape-A in composer to open the AttachFile dialog
  - allow to move rules up/down
  - rules can match on recipients (To/Cc)

  - bug fix: rules with non-empty folder condition don't match when 
    restricting to current server
  - bug fix: make the rules work in standalone message windows
  - bug fix: if the user started to type very quickly after the
    the nostalgy completion box was enabled, some keys were lost
    (or sent to other widgets)
  - bug fix: invalidate the folder (sorted) list cache when a folder
    is created or deleted (or renamed)
    

0.1.9
  - allow installation on Thunderbird 2.0b1
  - select a message when entering a folder with the G key
    (does not work currently)
  - don't prefix folder names with the server name when restricting
    to the current server
  - option to sort folders in the completion box
  - completion even when not editing at the end of the box
  - new shell-completion mode activated by Tab

0.1.8
  - bug fix: the M and I keys were incorrectly captured

0.1.7
  - limit the width of the nostalgy label (which displays the default
    folder) to avoid horizontal overflow of TB's window
  - hide the nostalgy input box when blurred (does not work very well)

0.1.6
  - add the rule system (quick selection of a default folder for messages)
  - add the Ctrl-Left/Ctrl-Right keys (scroll the message while the
    thread pane is focused)
  - change pane-navigation commands (see about.xhtml)