@@ -135,8 +135,8 @@ uppercase, you don't need to press Shift.</p>
    <p>Nostalgy adds some support for keyboard operations to the Composer window.</p>
 
    <p>When typing in a header, it's possible to change easily the header
-to either "To:" or "Cc:". To do so, you need to be at the beginning
-of the input box, and simply type "to " or "cc " (with the whitespace,
+to either "To:", "Cc:" or "Bcc:". To do so, you need to be at the beginning
+of the input box, and simply type "to ", "cc " or "bcc " (with the whitespace,
 without the quotes).</p>
 
    <p>The Esc-Esc combination focuses the message body. The Esc-A combination
