@@ -1,6 +1,7 @@
 Since 0.2.1
   - bug fix: field choices in rules were not saved correctly
   - allows to match fields with regexps in rules
+  - allow to switch to "Bcc:" in the composer
 
 0.2.1
   - fix for recent TB builds  (ontextcommand -> ontextentered,
